2002-09-28  Akim Demaille  <akim@epita.fr>

	* bin/Makefile.am (ETAGS_SH, ETAGS_PERL): Update: ifnames and
	autoheader are Perl programs.
	(autoconf, autoheader, autoreconf, autoupdate, ifnames, autoscan)
	(autom4te): Specify that the sources are in the $srcdir.
	* doc/autoconf.texi (Installation Directory Variables): Adjust.

2002-09-28  Akim Demaille  <akim@epita.fr>

	* lib/autoscan/autoscan.pre (st_blksize, st_blocks, st_rdev)
	(tm_zone): Move their rules to...
	* lib/autoconf/types.m4: here, using AN_ macros.
	* lib/autoscan/autoscan.pre (AWK, BISON, INSTALL, LEX, LN, MAKE)
	(RANLIB, YACC, awk, bison, byacc, flex, gawk, install, lex, ln)
	(make, mawk, nawk, ranlib, yacc): Similarly, move to...
	* lib/autoconf/programs.m4: here.
	* lib/freeze.mk (ETAGS_FOR_M4, ETAGS_FOR_M4SUGAR)
	(ETAGS_FOR_AUTOCONF): New.
	Use it.

2002-09-28  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoscan.m4: New file.
	* lib/autoconf/autoconf.m4: Include it.
	* lib/autoconf/functions.m4: Use AN_FUNCTION for all the functions
	that were listed in the original autoscan.list.
	* lib/autoconf/headers.m4: Similarly with headers.
	* lib/freeze.mk (autoconf_m4f_dependencies): Add autoscan.m4.
	(.m4.m4f): Don't pass --prepend-include, since that's done by
	tests/autom4te itself.
	* lib/autoscan/Makefile.am: Include freeze.mk.
	(autoscan.list): New target --this file is no longer a source.
	(autoscan.pre): New file.

2002-09-28  Akim Demaille  <akim@epita.fr>

	* bin/autoscan.in (@kinds): Make them singular.
	Adjust all uses.
	(&init_tables): When --debug, report the list of rules to ease
	tracking changes in autoscan.list.
	* lib/autoscan/autoscan.list (function): Strip comments, sort.

2002-09-28  Akim Demaille  <akim@epita.fr>

	* lib/autoscan/functions, lib/autoscan/headers,
	* lib/autoscan/identifiers, lib/autoscan/makevars,
	* lib/autoscan/programs: Merge into...
	* lib/autoscan/autoscan.list: this.
	* bin/autoscan.in (&init_tables): Adjust.

2002-09-28  Akim Demaille  <akim@epita.fr>