@@ -1,5 +1,10 @@
 2002-09-28  Akim Demaille  <akim@epita.fr>
 
+	* tests/m4sh.at (Functions Support, Functions and return Support):
+	New.
+
+2002-09-28  Akim Demaille  <akim@epita.fr>
+
 	* bin/Makefile.am (ETAGS_SH, ETAGS_PERL): Update: ifnames and
 	autoheader are Perl programs.
 	(autoconf, autoheader, autoreconf, autoupdate, ifnames, autoscan)
